# FRCJetsonApril

./: .capture.cpp.swp  .gitignore  2q  CMakeLists.txt  Makefile  README.txt  Rules.mk  bindiff.py  calibrate  calibrate.cpp  capture.cpp  capture8bit.cpp  capture971.cpp  capture971only.cpp  capturestockrpiv2  capturestockrpiv2.cpp  captureusb.cpp  captureusb.cu  control  cuAprilTags.h  debugcamera.sh  extlinux.conf  hardware32.7.2.patch  kernel32.7.2.patch  libapril_tagging16h5.a.bspatch  libapril_tagging16h5.a.hexpatch  libapril_tagging16h5.a.patch  libcuapriltags16h5.a.bspatch  nvAprilTags.h  orinnanooverlaycmd.sh  orinov92818bitkernelR36.3.0.patch  patch.py  raw2rgb.cu  raw2rgb.cuh  rc.local  rjskernelbuild.sh  rjsorinjp6kernelbuild.sh  rjsorinkernelbuild.sh  testcommands.sh  xavieroverlaycmd.sh  (+2 more)
frc971/orin/: 971apriltag.cu  971apriltag.h  apriltag_detect.cu  cuda.cc  cuda.h  gpu_apriltag.cu  gpu_apriltag.h  gpu_image.h  labeling_allegretti_2019_BKE.cu  labeling_allegretti_2019_BKE.h  line_fit_filter.cu  line_fit_filter.h  main.cu  points.h  threshold.cu  threshold.h  transform_output_iterator.h
frc971/orin/dontcompile/: cuda_april_tag_test.cc  gpu_apriltag.cu  gpu_apriltag.h  main.cu  main.h
frc971/orin/dontcompile/vision/: calibration_generated.h
newlibcuapriltags/: AprilTags_impl.cpp.o.orig  AprilTags_impl.cpp.o.xxdpatch  TagFamily.cpp.o.orig  TagFamily.cpp.o.xxdpatch
oldlibcuapriltags/libcuapriltags/: AprilTags_impl.cpp.o.orig  AprilTags_impl.cpp.o.xxdpatch  TagFamily.cpp.o.orig  TagFamily.cpp.o.xxdpatch
